--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Sandra da Cruz Martins</title>
     <style>
       html, body {
         margin: 0;
         padding: 0;
+        font-family: 'Raleway', sans-serif;
       }
     </style>
   </head>
