--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
         font-family: 'Raleway', sans-serif;
         overflow-x: hidden;
       }
+
+      .anchor {
+        text-decoration: none;
+        font-weight: 700;
+        color: #73d9fa;
+      }
     </style>
   </head>
   <body>
