--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,22 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Sandra da Cruz Martins</title>
     <style>
       html, body {
         margin: 0;
         padding: 0;
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         overflow-x: hidden;
       }
 
       .anchor {
         text-decoration: none;
         font-weight: 700;
-        color: #73d9fa;
+        color: #5ec9f1;
       }
     </style>
   </head>
